--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,6 @@
     <link rel="icon" type="image/png" href="https://assets.hackclub.com/favicons/favicon-32x32.png" />
 
     <link rel="stylesheet" href="fonts/style.css" />
-
     <!-- Primary Meta Tags -->
     <title>Hack Club CTF</title>
     <meta name="title" content="Hack Club CTF" />
@@ -29,14 +28,14 @@
 
     <meta property="og:title" content="Hack Club CTF" />
     <meta property="og:description" content="A CTF for Hack Clubbers by Hack Clubbers" />
-    <meta property="og:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=date%20will%BE%20here" />
+    <meta property="og:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=Aug%207th%20to%208th$202020" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
 
     <meta property="twitter:title" content="Hack Club CTF" />
     <meta property="twitter:description" content="A CTF for Hack Clubbers by Hack Clubbers" />
-    <meta property="twitter:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=date%20will%BE%20here" />
+    <meta property="twitter:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=Aug%207th%20to%208th$202020" />
 </head>
 
 <body>
@@ -85,8 +84,11 @@
             background-color: blue;
         }
         
-        .back a:after {
-            text-decoration: none;
+        a:visited {
+            color: rgb(240, 236, 8);
+        }
+        
+        .back a:visited {
             color: white;
         }
     </style>
