--- a/assets/simple-grid.css
+++ b/assets/simple-grid.css
@@ -59,7 +59,8 @@
   margin-right: 8%;
 }
 
-h2,hr {
+h2,
+hr {
   margin-left: 3%;
 }
 
@@ -129,7 +130,7 @@ h2,hr {
   padding: 0px 3% 30px;
 }
 
-.text-content{
+.text-content {
   width: 90%;
 }
 
@@ -140,7 +141,7 @@ h2,hr {
 }
 
 @media only screen and (min-width: 45em) {
-  .text-content{
+  .text-content {
     width: 60%;
   }
   /* 720px */
@@ -160,7 +161,8 @@ h2,hr {
     margin-right: 0.7% !important;
   }
 
-  h2,hr {
+  h2,
+  hr {
     margin-left: 1% !important;
     margin-right: 1% !important;
   }
@@ -231,8 +233,8 @@ h2,hr {
   }
   .container {
     width: 80%;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
