More design changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,6 +128,7 @@ title: { { page.title } }
         min-height: 70vh;
         text-align: left;
         margin-top: 20px;
+        margin-bottom: 20px;
       "
     >
       {{ content }}
